namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-prisoner-finance-prod/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-prisoner-finance-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "hmpps-prisoner-finance"
    cloud-platform.justice.gov.uk/slack-alert-channel: "hmpps-prisoner-finance-alerts"
    cloud-platform.justice.gov.uk/application: "Prisoner Finance"
    cloud-platform.justice.gov.uk/owner: "Prisoner Finance: digital-prisoner-finance@justice.gov.uk"
cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-prisoner-finance-api,https://github.com/ministryofjustice/hmpps-prisoner-finance-ui,https://github.com/ministryofjustice/hmpps-prisoner-finance-holds-api,https://github.com/ministryofjustice/hmpps-prisoner-finance-advances-api,https://github.com/ministryofjustice/hmpps-prisoner-finance-subscriptions-api"    
cloud-platform.justice.gov.uk/team-name: "hmpps-prisoner-finance"
